# VideoTranSrt

./: .gitignore  .gitmodules  LICENSE  README.md  compile_commands.json  create_test_audio.py  download_models.py  install.bat  install.sh  manual_download.py  merge_docs.py  pyproject.toml  requirements.txt  run.py  setup.py  test_config_system.py  test_dependencies.py  test_librosa_fix.py  test_new_model_loaders.py  test_new_plugin_structure.py  test_plugin_download.py  test_plugin_system.py  test_plugins.py  test_translator_fix.py  tips.md
.github/workflows/: build-windows.yml  ci-cd.yml  native-gui-mingw.yml  native-gui.yml  release.yml  windows-release.yml
config/: default_config.json
doc/: documentation.md
doc/md_backup/: AUTO_OUTPUT_NAME_GUIDE.md  CONFIG_USAGE.md  CONTEXT_TRANSLATION_GUIDE.md  DEVELOPMENT.md  DYNAMIC_URL_GUIDE.md  FIXES_REPORT.md  MODEL_DOWNLOAD_GUIDE.md  MODEL_MANAGEMENT.md  MODEL_UPDATE_SUMMARY.md  README.md  SSL_TROUBLESHOOTING.md
docs/previews/: cpu_precision_setting.html
examples/: basic_usage.py
native/: BUILD.md  CMakeLists.txt  PLANNING.md  README.md  configure.ps1  vcpkg.json
native/apps/cli/: CMakeLists.txt
native/apps/cli/src/: main.cpp
native/apps/qtgui/: CMakeLists.txt
native/apps/qtgui/src/: MainWindow.cpp  MainWindow.h  ModelManagerDialog.cpp  ModelManagerDialog.h  main.cpp
native/libs/core/: CMakeLists.txt
native/libs/core/include/video2srt_native/: audio.hpp  config_manager.hpp  core.hpp  formatter.hpp  google_translator.hpp  model_manager.hpp  models.hpp  openai_translator.hpp  output_formats.hpp  processor.hpp  transcriber.hpp  translator.hpp
native/libs/core/src/: audio.cpp  config_manager.cpp  core.cpp  formatter.cpp  google_translator.cpp  model_manager.cpp  models.cpp  openai_translator.cpp  output_formats.cpp  processor.cpp  transcriber.cpp  translator.cpp
tests/: conftest.py  test_core.py
video2srt/: __init__.py  audio_extractor.py  cli.py  config_manager.py  core.py  error_handler.py  formatter.py  huggingface_validator.py  model_loader_factory.py  model_loaders.py  model_manager.py  models.py  network_utils.py  output_formats.py  plugin_download_manager.py  reporter.py  transcriber.py  translator.py  translator_manager.py
video2srt/gui/: __init__.py  __main__.py  config_dialog.py  main.py  plugin_download_thread.py  widgets.py
video2srt/plugins/: __init__.py  base.py  manager.py
video2srt/plugins/distil_whisper/: __init__.py  plugin.py
video2srt/plugins/intel_gpu/: __init__.py  plugin.py
video2srt/plugins/intel_int8/: __init__.py  plugin.py
video2srt/plugins/loaders/: __init__.py
video2srt/plugins/openvino_optimized/: __init__.py  plugin.py
video2srt/plugins/standard_whisper/: __init__.py  plugin.py
